--- a/public/sass/common.scss
+++ b/public/sass/common.scss
@@ -1,5 +1,87 @@
 $primary-font-color: #fff;
 
+* {
+    font-family:'Droid Sans', sans-serif;
+}
+
+/* Links */
+a,
+a:focus,
+a:hover {
+  color: #fff;
+}
+
+/* Custom default button */
+.btn-default,
+.btn-default:hover,
+.btn-default:focus {
+  color: #333;
+  text-shadow: none; /* Prevent inheritence from `body` */
+  background-color: #fff;
+  border: 1px solid #fff;
+}
+
+/*
+ * Base structure
+ */
+html,
+body {
+  height: 100%;
+  background-color: #333;
+}
+body {
+    overflow-x:hidden;
+    margin:0;
+    padding:0;
+
+    color: #fff;
+    text-align: center;
+    text-shadow: 0 1px 3px rgba(0,0,0,.5);
+    box-shadow: inset 0 0 100px rgba(0,0,0,.5);
+}
+
+.navbar {
+  background-color: transparent;
+  border-color: transparent;
+}
+
+.navbar-nav {
+  float: right;
+}
+
+.navbar-nav > li {
+  display: inline-block;
+}
+.navbar-nav > li + li {
+  margin-left: 20px;
+}
+.navbar-nav > li > a {
+  padding-right: 0;
+  padding-left: 0;
+  font-size: 16px;
+  font-weight: bold;
+  color: #fff; /* IE8 proofing */
+  color: rgba(255,255,255,.75);
+  border-bottom: 2px solid transparent;
+}
+.navbar-nav > li > a:hover,
+.navbar-nav > li > a:focus {
+  background-color: transparent;
+  border-bottom-color: rgba(255,255,255,.25);
+}
+.navbar-nav > .active > a,
+.navbar-nav > .active > a:hover,
+.navbar-nav > .active > a:focus {
+  background-color: transparent !important;
+  color: #fff;
+  border-bottom-color: #fff;
+}
+
+/* Padding for spacing */
+.inner {
+  padding: 30px;
+}
+
 span.glyphicon {
     font-size: 5.0em;
 }
